[package]
name = "inoxidables-23c1"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.24"
rand = "0.8.4"
bs58 = "0.5.0"
bitcoin_hashes = "0.12.0"
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "glib" }

secp256k1 = { version = "0.27.0", features = ["global-context", "rand-std", "bitcoin-hashes-std"] }
k256 = "0.13.1"

[features]
exclude-test=[]
